Fix flashcard graphical bug on firefox
Fixes the issue of flashcards being see through from the front in firefox browsers

--- a/BlazorLanguageLearningApp/Client/Pages/FlashcardsPage.razor.css
+++ b/BlazorLanguageLearningApp/Client/Pages/FlashcardsPage.razor.css
@@ -25,8 +25,12 @@
 .term-container-front,
 .term-container-back {
     position: absolute;
-    -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Safari */
+}
+
+.term-container-front {
+    transform: rotateY(0deg);
 }
 
 .term-container-back {
